fix: Fixing name alignment

--- a/packages/website/components/account/filesManager/fileRowItem.scss
+++ b/packages/website/components/account/filesManager/fileRowItem.scss
@@ -139,6 +139,10 @@ $file-size: auto;
         padding-right: 2.5rem;
         flex-direction: row;
       }
+
+      &-name {
+        align-items: end;
+      }
     }
   }
 
